app/static/style.css
@import url(https://fonts.bunny.net/css?family=archivo-black:400);
@import url(https://fonts.bunny.net/css?family=alegreya-sans:300);
@import url(https://fonts.bunny.net/css?family=alegreya:400,700);

html {
    color-scheme: light dark;
    --background: light-dark(white, #363636);
    --text: light-dark(#363636, white);
}

* {
    background-color: var(--background);
    color: var(--text);
}

.page_container {
    clear: both;
    width: 90%;
    max-width: 600px;
    margin: auto;
    text-align: center;
}

/* General text and geometry styling */
#title_div {
    display: inline-block;
    margin: auto;
}

.title {
    width: 100%;
    margin: auto;
    text-align: center;
    font-size: 70px;
    line-height: 1;
    letter-spacing: -0.15em;
}

.title_link {
    text-decoration: none;
    font-family: 'archivo black', serif;
}

.square {
    width: 100%;
    clear: both;
}

.square_small {
    width: 50%;
    height: 40px;
    float: left;
    text-align: center;
    font-size: 19px;
    font-style: oblique;
    text-decoration: none;
    align-content: center;
    font-family: 'Alegreya', sans;
    box-sizing: border-box;
    line-height: 45px;
}

.square_small:hover {
    background-color: var(--text);
    color: var(--background);
}

#left_square_small {
    text-align: left;
    padding-left: 5px;
}

#right_square_small {
    text-align: right;
    padding-right: 5px;
}



.divider1 {
    height: 1vw;
}

.divider2 {
    height: 0.75cm;
    clear: both;
}


.square_edit_posts_title {
    width: 79%;
    float: left;
    margin-bottom: 10px;
    font-size: 20px;
    text-decoration: none;
}

.square_edit_posts_button {
    width: 20%;
    float: left;
    margin-bottom: 10px;
    font-size: 20px;
    text-decoration: none;
}

.preview_link_wrapper {
    text-decoration: none;
}

.preview {
    text-align: left;
}

.preview>h3 {
    font-family: 'alegreya', serif;
    font-weight: 300;
    font-size: 25px;
    margin-top: 0;
    margin-bottom: -6px;
    display: block;
    width: fit-content;
    line-height: 1.4;
}

.preview:hover>h3 {
    background-color: var(--text);
    color: var(--background)
}

.preview>.date {
    margin-top: 3px;
    margin-bottom: 5px;
    font-size: 17px;
    font-family: 'Alegreya Sans', sans-serif;
    line-height: 1.3;
}

.preview>p {
    margin-top: 0;
    margin-bottom: 40px;
    font-size: 19px;
    font-family: 'Alegreya', serif;
    line-height: 1.3;
}

.blog_content {
    color: var(--text);
    font-size: 19.5px;
    font-family: 'Alegreya', serif;
    text-align: left;
}

.blog_content>p {
    line-height: 150%;
}

.blog_content>h1 {
    font-family: 'alegreya', serif;
    font-size: 45px;
    font-weight: 300;
    letter-spacing: -0.05em;
    text-align: center;
    margin-bottom: 0px;
    margin-top: 20px;
    line-height: 1;
}

#post_date {
    margin: 0px;
    text-align: right;
    margin-top: 2px;
    font-size: 17px;
    line-height: 1.2;
    font-family: 'Alegreya Sans', sans-serif;
    margin-bottom: 30px;
}

p a:hover {
    background-color: var(--text);
    color: var(--background);
}

/* Image styling */
img {
    width: 100%;
    max-height: 500px;
    display: block;
    margin: auto;
    border-radius: 8px;
}

/* Administrator side styling */
.add_post_form {
    text-align: center;
}

.add_post_form input {
    box-sizing: border-box;
    width: 80%;
    max-width: 850px;
    border: 2px solid var(--text);
    padding: 7px;
    color: var(--text);
    font-size: 21px;
}

.add_post_form #email {
    margin-bottom: 0px;
}

.add_post_form #email_submit {
    border-top: 0px;
}

.email_title {
    text-align: center;
    font-size: 35px;
    font-family: 'Alegreya', sans-serif;
}

.email_note {
    width: 80%;
    margin: auto;
    font-family: 'Alegreya', serif;
}

.email_note p,
.email_note ul li {
    text-align: center;
    font-style: oblique;
    font-size: 17px;
}

.add_post_form input[type=submit]:hover {
    background-color: var(--text);
    color: var(--background);
}

.add_post_form textarea {
    width: 80%;
    max-width: 850px;
    border: 2px solid var(--text);
    padding: 7px;
    color: var(--text);
    font-size: 21px;
}

.add_post_form #content {
    height: 200px;
}

.add_post_form #preview {
    height: 40px;
}

.add_post_form #delete_images_block {
    margin: auto;
    width: 80%;
    max-width: 850px;
    border: 2px solid var(--text);
    padding: 7px;
    color: var(--text);
    font-size: 21px;
    margin-bottom: 5px;
}


.add_post_form #delete_images p {
    margin: 0px;
}

.add_post_form #delete_images input {
    width: auto;
}

.add_post_form #delete_images li::marker {
    content: '';
}

.add_post_form #add_images_block {
    margin: auto;
    width: 80%;
    max-width: 850px;
    border: 2px solid var(--text);
    padding: 7px;
    color: var(--text);
    font-size: 21px;
}

.add_post_form #add_images_block input {
    border: 0px;
}

/* Quote styling */
blockquote {
    border-left: 5px solid #aaa;
    background-color: light-dark(#f8f8f8, #2a2924);
    color: var(--text);
    margin: 24px 0;
    padding: 16px 24px;
    font-style: italic;
    font-size: 1.1em;
}

/* required since there are <p> and mathjax inside blockquotes */
blockquote * {
    background-color: light-dark(#f8f8f8, #2a2924);
}

/* List styling */
ol,
ul {
    margin-left: 15px;
    list-style-position: inside;

}

::marker {
    font-style: italic;
}

li {
    margin-top: 5px;
}

/* Table styling */
table {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 40px;
    border-collapse: collapse;
}

th,
td {
    padding: 10px;
}

td {
    border-bottom: 1px solid;
}

th {

    border-bottom: 2px solid;
}

/* Mathjax styling */
mjx-container {
    display: inline-grid;
    overflow-x: auto;
    overflow-y: hidden;
    max-width: 100%;
}

/* Responsiveness */
@media only screen and (min-width: 740px) {
    .blog_content {
        font-size: 21px;
    }
}



@media only screen and (max-width: 500px) {

    .page_container {
        width: 95%;
    }

    .square {
        width: 97%;
    }

    .title {
        font-size: 45px;
    }

    .blog_content>h1 {
        text-align: left;
        margin-bottom: 5px;
    }

    .square_small {
        font-size: 20px;
    }

    .square_small:hover {
        background-color: none;
        color: none;
    }

    .divider2 {
        height: 25px;

    }

    .preview>h3 {
        font-size: 22px;
        line-height: 1.2;
    }

    .preview>p {
        font-size: 18px;
        margin-bottom: 35px;
    }

    #post_date {
        text-align: left;
        line-height: 1.3;
        margin-top: 0px;
        margin-bottom: 30px;
    }

    .add_post_form input {
        width: 100%;
    }

    .email_note {
        width: 100%;
    }

    .email_note p {
        font-size: 15.5px;
    }

    .add_post_form textarea {
        width: 95%;
    }

    .blog_content {
        width: 100%;
        font-size: 1.3rem;
    }

    .blog_content>p {
        line-height: 150%;
    }

    ol,
    ul {
        margin-left: 0px;
        padding-left: 7px;

    }

    .preview {
        width: 95%;
        margin: auto;
    }

    .square_small:hover {
        background-color: var(--background);
        color: var(--text);
    }

    .preview:hover>h3 {
        background-color: var(--background);
        color: var(--text);
    }

    p a:hover {
        background-color: var(--background);
        color: var(--text);
    }

    .square_small:active {
        background-color: var(--text);
        color: var(--background);
    }

    .preview:active>h3 {
        background-color: var(--text);
        color: var(--background);
    }

    p a:active {
        background-color: var(--text);
        color: var(--background);
    }


}

